# fuzzcppcheck

./: .gitmodules  CMakeLists.txt  README.md
corpus/: README.txt
corpus/taken_from_cppcheck_tests/: stolen_0.cpp  stolen_1.cpp  stolen_10.cpp  stolen_100.cpp  stolen_1000.cpp  stolen_10000.cpp  stolen_10001.cpp  stolen_10002.cpp  stolen_10003.cpp  stolen_10004.cpp  stolen_10005.cpp  stolen_10006.cpp  stolen_10007.cpp  stolen_10008.cpp  stolen_10009.cpp  stolen_1001.cpp  stolen_10010.cpp  stolen_10011.cpp  stolen_10012.cpp  stolen_10013.cpp  stolen_10014.cpp  stolen_10015.cpp  stolen_10016.cpp  stolen_10017.cpp  stolen_10018.cpp  stolen_10019.cpp  stolen_1002.cpp  stolen_10020.cpp  stolen_10021.cpp  stolen_10022.cpp  stolen_10023.cpp  stolen_10024.cpp  stolen_10026.cpp  stolen_10027.cpp  stolen_10028.cpp  stolen_10029.cpp  stolen_1003.cpp  stolen_10030.cpp  stolen_10032.cpp  stolen_10033.cpp  (+9484 more)
corpus/taken_from_cppcheck_tests_aflminimized/: stolen_10025.cpp  stolen_10031.cpp  stolen_10040.cpp  stolen_10049.cpp  stolen_10058.cpp  stolen_10059.cpp  stolen_1006.cpp  stolen_10068.cpp  stolen_10075.cpp  stolen_10082.cpp  stolen_10103.cpp  stolen_10109.cpp  stolen_10151.cpp  stolen_10156.cpp  stolen_10179.cpp  stolen_10193.cpp  stolen_10194.cpp  stolen_102.cpp  stolen_10230.cpp  stolen_10231.cpp  stolen_10237.cpp  stolen_10262.cpp  stolen_10263.cpp  stolen_10286.cpp  stolen_10288.cpp  stolen_10291.cpp  stolen_10298.cpp  stolen_10310.cpp  stolen_10332.cpp  stolen_10346.cpp  stolen_10347.cpp  stolen_10351.cpp  stolen_10375.cpp  stolen_10385.cpp  stolen_10387.cpp  stolen_10399.cpp  stolen_10400.cpp  stolen_10401.cpp  stolen_10414.cpp  stolen_10416.cpp  (+861 more)
src/: VoidLogger.h  afl_entry.cpp  libfuzzer_entry.cpp  slurp.cpp  slurp.h
